# tash

./: .gitignore  Dockerfile  Makefile  Makefile.old  README.md  config.status  configure.ac  configure.lineno  docker-compose.yml
src/: Makefile  Makefile.am  options.c  ta-lib-cli.c  talib.c  tash  tash.c
src/.deps/: options.Po  talib.Po  tash.Po
src/include/: options.h  talib.h  tash.h
